should work better for node lib build

--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "type": "git",
     "url": "https://github.com/slimplate/filesystem.git"
   },
-  "peerDependencies": {
+  "peerDependencies": {},
+  "dependencies": {
     "glob": "^10.2.7",
     "gray-matter": "^4.0.3",
     "@slimplate/utils": "^0.0.1",
     "match-url-wildcard": "^0.0.4"
-  },
-  "dependencies": {}
+  }
 }
