trying to fix jenk

--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "type": "git",
     "url": "https://github.com/slimplate/filesystem.git"
   },
-  "peerDependencies": {},
-  "dependencies": {
+  "peerDependencies": {
     "glob": "^10.2.7",
     "gray-matter": "^4.0.3",
     "@slimplate/utils": "^0.0.1",
     "match-url-wildcard": "^0.0.4"
+  },
+  "dependencies": {
+    
   },
   "files": [
     "dist/**/*"
