--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "peerDependencies": {
     "glob": "^10.2.7",
     "gray-matter": "^4.0.3",
-    "@slimplate/utils": "^0.0.1",
+    "@slimplate/utils": "latest",
     "match-url-wildcard": "^0.0.4"
   },
   "dependencies": {},
